--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -201,6 +201,34 @@
             "changelogs": {
                 "open" : "🚀 チェンジログを覗いてみて！",
                 "not-founds": "😕 あれ、チェンジログが見当たらない！"
+            },
+            "advanced": {
+                "title": "高度な設定",
+                "description": "BSManagerの高度な設定。",
+                "hardware-acceleration": {
+                    "title": "ハードウェアアクセラレーション",
+                    "description": "ハードウェアアクセラレーションを有効にしてGPUを使用し、BSManagerのパフォーマンスを向上させます。フレームドロップが発生している場合は、これをオフにしてください。",
+                    "modal": {
+                        "title": "再起動が必要",
+                        "body": "ハードウェアアクセラレーションの設定を変更すると、BSManagerが終了して再起動します。本当に続行しますか？",
+                        "confirm-btn": "はい、確かです"
+                    },
+                    "error-notification": {
+                        "message": "エラーが発生しました。ハードウェアアクセラレーションを無効にできません。"
+                    }
+                },
+                "use-symlinks": {
+                    "title": "シンボリックリンクを使用",
+                    "description": "フォルダをリンクするためにジャンクションの代わりにシンボリックリンクを使用します。本当に必要な場合にのみこれをオンにしてください。",
+                    "modal": {
+                        "title": "シンボリックリンクの権限",
+                        "body": "シンボリックリンクを作成する際、BSManagerは管理者権限またはシステムで有効になっている開発者モードを必要とします。本当に続行しますか？",
+                        "confirm-btn": "はい、確かです"
+                    },
+                    "error-notification": {
+                        "message": "エラーが発生しました。シンボリックリンク設定を変更できません。"
+                    }
+                }
             }
         }
     },
