--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -201,6 +201,34 @@
             "changelogs": {
                 "open" : "🚀 Изучаем Changelog!",
                 "not-founds": "😕 Ой, Changelog нигде не видно!"
+            },
+            "advanced": {
+                "title": "Дополнительные",
+                "description": "Дополнительные настройки для BSManager.",
+                "hardware-acceleration": {
+                    "title": "Аппаратное ускорение",
+                    "description": "Включите аппаратное ускорение, чтобы использовать ваш GPU и улучшить производительность BSManager. Отключите эту опцию, если у вас возникают пропуски кадров.",
+                    "modal": {
+                        "title": "Требуется перезагрузка",
+                        "body": "Изменение настройки аппаратного ускорения приведет к завершению и перезапуску BSManager. Вы уверены, что хотите это сделать?",
+                        "confirm-btn": "Да, я уверен"
+                    },
+                    "error-notification": {
+                        "message": "Произошла ошибка, невозможно отключить аппаратное ускорение."
+                    }
+                },
+                "use-symlinks": {
+                    "title": "Использовать символические ссылки",
+                    "description": "Используйте символические ссылки вместо соединений для связывания папок. Включайте эту опцию только если это действительно необходимо.",
+                    "modal": {
+                        "title": "Разрешения для символических ссылок",
+                        "body": "При создании символических ссылок BSManager потребуется права администратора или включенный режим разработчика на вашем устройстве. Вы уверены, что хотите продолжить?",
+                        "confirm-btn": "Да, я уверен"
+                    },
+                    "error-notification": {
+                        "message": "Произошла ошибка, невозможно изменить настройки символических ссылок."
+                    }
+                }
             }
         }
     },
