--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -771,7 +771,7 @@
         },
         "ask-install-path": {
             "title": "Installations Ordner",
-            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager.",
+            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager. (e.g. versions, mods, maps, playlists, etc.)",
             "choose-folder": "Ordner Wählen",
             "default": "Default",
             "default-tooltip": "Defaults to your home folder"
