--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -770,7 +770,7 @@
         },
         "ask-install-path": {
             "title": "Папка установок",
-            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager.",
+            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager. (e.g. versions, mods, maps, playlists, etc.)",
             "choose-folder": "Изменить папку",
             "default": "Default",
             "default-tooltip": "Defaults to your home folder"
