--- a/assets/jsons/translations/ja.json
+++ b/assets/jsons/translations/ja.json
@@ -505,6 +505,18 @@
             "duplicates-maps-deleted": {
                 "title": "重複削除",
                 "msg": "重複が削除されました"
+            },
+            "import-map": {
+                "titles": {
+                    "success": "Map import complete",
+                    "error": "An error occurred while importing the map"
+                },
+                "msgs": {
+                    "success": "Imported \"{mapName}\" map successfully",
+                    "only-accept-zip": "Only zip files are supported",
+                    "not-found-zip": "Zip file does not exists",
+                    "invalid-zip": "Invalid zip file contents"
+                }
             }
         },
         "playlists": {
