--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -505,6 +505,18 @@
             "duplicates-maps-deleted": {
                 "title": "Дубликаты удалены",
                 "msg": "Дубликаты были удалены"
+            },
+            "import-map": {
+                "titles": {
+                    "success": "Map import complete",
+                    "error": "An error occurred while importing the map"
+                },
+                "msgs": {
+                    "success": "Imported \"{mapName}\"map successfully",
+                    "only-accept-zip": "Only zip files are supported",
+                    "not-found-zip": "Zip file does not exists",
+                    "invalid-zip": "Invalid zip file contents"
+                }
             }
         },
         "playlists": {
