[feat-75] support multiple drag and drop zip files for maps
fixed issue in map downloads where download listener in MapsDownloaderService was not being removed

--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -512,7 +512,8 @@
                     "error": "An error occurred while importing the map"
                 },
                 "msgs": {
-                    "success": "Imported \"{mapName}\"map successfully",
+                    "success": "Imported all maps successfully",
+                    "some-success": "Imported some maps successfully",
                     "only-accept-zip": "Only zip files are supported",
                     "not-found-zip": "Zip file does not exists",
                     "invalid-zip": "Invalid zip file contents"
