--- a/assets/jsons/translations/de.json
+++ b/assets/jsons/translations/de.json
@@ -15,7 +15,7 @@
         "apply": "Übernehmen",
         "copy": "Kopieren",
         "copied": "Kopiert!",
-        "confirm": "Confirm"
+        "confirm": "Bestätigen"
     },
     "nav-bar": {
         "add-version": "Version hinzufügen",
@@ -139,7 +139,7 @@
             },
             "installation-folder": {
                 "title": "Installations-Ordner",
-                "description": "Change the folder that will contain all the content downloaded by BSManager.",
+                "description": "Ändern Sie den Ordner, der alle von BSManager heruntergeladenen Inhalte enthalten wird.",
                 "choose-folder": "Ordner wählen"
             },
             "additional-content": {
@@ -771,10 +771,10 @@
         },
         "ask-install-path": {
             "title": "Installations Ordner",
-            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager. (e.g. versions, mods, maps, playlists, etc.)",
+            "choose-folder-description": "Wählen Sie den Ordner aus, der alle von BSManager heruntergeladenen Inhalte enthalten soll. (Versionen, Mods, Karten, Playlists, etc.)",
             "choose-folder": "Ordner Wählen",
-            "default": "Default",
-            "default-tooltip": "Defaults to your home folder"
+            "default": "Standard",
+            "default-tooltip": "Standardmäßig in Ihrem persönlichen Ordner"
         }
     },
     "maps": {
