--- a/assets/jsons/translations/es.json
+++ b/assets/jsons/translations/es.json
@@ -15,7 +15,7 @@
         "apply": "Aplicar",
         "copy": "Copiar",
         "copied": "¡Copiado!",
-        "confirm": "Confirm"
+        "confirm": "Confirmar"
     },
     "nav-bar": {
         "add-version": "Agregar una versión",
@@ -139,7 +139,7 @@
             },
             "installation-folder": {
                 "title": "Carpeta de instalación",
-                "description": "Change the folder that will contain all the content downloaded by BSManager.",
+                "description": "Cambiar la carpeta que contendrá todo el contenido descargado por BSManager.",
                 "choose-folder": "Elige la carpeta"
             },
             "additional-content": {
@@ -771,10 +771,10 @@
         },
         "ask-install-path": {
             "title": "Carpeta de instalación",
-            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager. (e.g. versions, mods, maps, playlists, etc.)",
+            "choose-folder-description": "Elija la carpeta que contendrá todo el contenido descargado por BSManager. (versiones, mods, mapas, listas de reproducción, etc.)",
             "choose-folder": "Elige la carpeta",
-            "default": "Default",
-            "default-tooltip": "Defaults to your home folder"
+            "default": "Predeterminado",
+            "default-tooltip": "Por defecto, en su carpeta personal"
         }
     },
     "maps": {
