--- a/assets/jsons/translations/zh.json
+++ b/assets/jsons/translations/zh.json
@@ -15,7 +15,7 @@
         "apply": "应用",
         "copy": "复制",
         "copied": "已复制!",
-        "confirm": "Confirm"
+        "confirm": "确认"
     },
     "nav-bar": {
         "add-version": "添加版本",
@@ -139,7 +139,7 @@
             },
             "installation-folder": {
                 "title": "安装文件夹",
-                "description": "Change the folder that will contain all the content downloaded by BSManager.",
+                "description": "更改将包含 BSManager 下载的所有内容的文件夹。",
                 "choose-folder": "选择文件夹"
             },
             "additional-content": {
@@ -771,10 +771,10 @@
         },
         "ask-install-path": {
             "title": "安装文件夹",
-            "choose-folder-description": "Choose the folder that will contain all the content downloaded by BSManager. (e.g. versions, mods, maps, playlists, etc.)",
+            "choose-folder-description": "选择将包含 BSManager 下载的所有内容的文件夹。(版本、mod、地图、播放列表等)",
             "choose-folder": "选择文件夹",
-            "default": "Default",
-            "default-tooltip": "Defaults to your home folder"
+            "default": "默认",
+            "default-tooltip": "默认为您的主文件夹"
         }
     },
     "maps": {
