--- a/assets/jsons/translations/ru.json
+++ b/assets/jsons/translations/ru.json
@@ -441,7 +441,8 @@
                     "CantEditSteam": "Не удалось изменить",
                     "CantRename": "Переименование невозможно",
                     "VersionAlreadExist": "Эта версия уже добавлена",
-                    "CantClone": "Клонирование невозможно"
+                    "CantClone": "Клонирование невозможно",
+                    "UnknownError": "Произошла неизвестная ошибка"
                 },
                 "msg": {
                     "CantEditSteam": "Вы не можете изменить версию из Steam, но вы можете её клонировать."
